@@ -7,12 +7,14 @@
 	<key>IBEditorPositions</key>
 	<dict>
 		<key>29</key>
-		<string>338 779 357 44 0 0 1280 1002 </string>
+		<string>244 571 357 44 0 0 1024 746 </string>
 	</dict>
 	<key>IBFramework Version</key>
-	<string>283.0</string>
+	<string>291.0</string>
 	<key>IBOpenObjects</key>
 	<array>
+		<integer>29</integer>
+		<integer>387</integer>
 		<integer>533</integer>
 	</array>
 	<key>IBSystem Version</key>
